--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview --port 5173"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.81.1",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "react": "^18.2.0",
@@ -21,5 +22,3 @@
     "vite": "^5.4.8"
   }
 }
-
-
