--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@supabase/supabase-js": "^2.81.1",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
+    "lucide-react": "^0.554.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.28.0",
