--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "vite": "^5.4.8"
   }
 }
