--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,28 @@
+# Azure Storage Configuration
+AZURE_STORAGE_CONNECTION_STRING=your_connection_string_here
+AZURE_STORAGE_CONTAINER_NAME=uploads
+AZURE_STORAGE_ACCOUNT_NAME=ryuhaalliance
+
+# Azure CDN Configuration (Optional - for faster global delivery)
+# To enable CDN:
+# 1. Create an Azure CDN profile in Azure Portal
+# 2. Create a CDN endpoint pointing to your storage account
+# 3. Set the endpoint URL below (e.g., https://yourcdn.azureedge.net)
+# AZURE_CDN_ENDPOINT=https://yourcdn.azureedge.net
+
+# MongoDB
+MONGODB_URI=your_mongodb_uri
+
+# JWT
+JWT_SECRET=your_jwt_secret
+
+# API
 PORT=5000
-MONGODB_URI=mongodb://127.0.0.1:27017/ryuha_alliance
-JWT_SECRET=change_me
-CLIENT_ORIGIN=http://localhost:5173
+NODE_ENV=development
+
+# Frontend URL (for CORS)
+FRONTEND_URL=http://localhost:5173
+
+# Supabase (for legacy images)
+SUPABASE_URL=your_supabase_url
+SUPABASE_KEY=your_supabase_key
