--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nanoid": "^5.1.6",
-    "nodemailer": "^7.0.10"
+    "nodemailer": "^7.0.10",
+    "socket.io": "^4.x.x"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
