--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.28.0",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "socket.io-client": "^4.7.5",
+    "date-fns": "^3.6.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
