--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,13 @@
     "@supabase/supabase-js": "^2.81.1",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.554.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.28.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
