--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "nanoid": "^5.1.6",
     "nodemailer": "^7.0.10",
     "resend": "^6.6.0",
+    "socket.io": "^4.8.1",
     "supabase": "^2.62.5"
   },
   "devDependencies": {
