--- a/.github/workflows/master_ryuhaalliance.yml
+++ b/.github/workflows/master_ryuhaalliance.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - RyuhaAlliance
+name: Build and deploy Node.js backend to Azure Web App - RyuhaAlliance
 
 on:
   push:
@@ -12,42 +9,50 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read #This is required for actions/checkout
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v3
+      - name: Use Node.js 18 LTS
+        uses: actions/setup-node@v4
         with:
-          node-version: '24.x'
+          node-version: '18.x'
+          cache: 'npm'
+          cache-dependency-path: backend/package-lock.json
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+      - name: Install dependencies
+        working-directory: backend
+        run: npm install
 
-      - name: Upload artifact for deployment job
+      - name: Run build (if exists)
+        working-directory: backend
+        run: npm run build --if-present
+
+      - name: Run tests (if exists)
+        working-directory: backend
+        run: npm test --if-present
+
+      - name: Upload backend artifact
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
-          path: .
+          name: backend-app
+          path: backend
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
+
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
-      - name: Download artifact from build job
+      - name: Download backend artifact
         uses: actions/download-artifact@v4
         with:
-          name: node-app
-      
+          name: backend-app
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -55,11 +60,9 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_25DC2D555AA64D9C9F3CD0B023D445DB }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_C28DBD2A50EA4ADD85870608D73A22D0 }}
 
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
+      - name: Deploy backend to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'RyuhaAlliance'
-          slot-name: 'Production'
+          app-name: RyuhaAlliance
+          slot-name: Production
           package: .
-          
